<resources>
    <string name="app_name">MobileVanity</string>
    <string name="facebook_app_id">1752956318306018</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- dialog -->
    <string name="positive_button">YES</string>
    <string name="negative_button">NO</string>

    <!-- toolbar -->
    <string name="toolbar_title_alert">Alert</string>
    <string name="toolbar_title_beauty_tip_detail">Read Beauty tip</string>
    <string name="toolbar_title_beauty_tip_write">Write Beauty tip</string>
    <string name="toolbar_title_cosmetic_detail">My Cosmetic Information</string>
    <string name="toolbar_title_cosmetic_list_eye_makeup">EYE MAKE-UP</string>
    <string name="toolbar_title_cosmetic_list_lip_makeup">LIP MAKE-UP</string>
    <string name="toolbar_title_cosmetic_list_skin_care">SKIN CARE</string>
    <string name="toolbar_title_cosmetic_list_face">FACE</string>
    <string name="toolbar_title_cosmetic_list_cleansing">CLEANSING</string>
    <string name="toolbar_title_cosmetic_list_tool">TOOL</string>
    <string name="toolbar_title_like">Like</string>
    <string name="toolbar_title_my_beauty_tip">My BeautyTip</string>
    <string name="toolbar_title_my_page">My Page</string>
    <string name="toolbar_title_update_profile">My Profile Update</string>
    <string name="toolbar_title_register_barcode">Register Barcode</string>
    <string name="toolbar_title_register_detail">Register Detail</string>
    <string name="toolbar_title_register_search">Register</string>
    <string name="toolbar_title_access_term">Access Terms</string>
    <string name="toolbar_title_faq">FAQ</string>
    <string name="toolbar_title_partnership">Partnership</string>
    <string name="toolbar_title_setting">Setting</string>
    <string name="toolbar_title_insert_profile">Register My Info</string>

    <!-- activity beauty tip detail -->
    <string name="actionbar_delete">Delete</string>
    <string name="actionbar_update">Update</string>

    <!-- fragment beauty tip -->
    <string name="latest">latest</string>
    <string name="popularity">popularity</string>
    <string name="button_text">register</string>

    <!-- activity_beauty_tip_pop_up -->
    <string name="dialog_comment_hint">Write Comment</string>
    <string name="dialog_button_text">send</string>

    <!-- view_beauty_tip_pop_up -->
    <string name="nickname_text">User Name</string>
    <string name="comment_text">Comment</string>

    <!-- activity beauty tip write -->
    <string name="activity_beauty_tip_write_title_hint">TitleHint</string>
    <string name="activity_beauty_tip_write_content_hint">ContentHint</string>

    <!-- activity cosmetic detail -->
    <string name="activity_cosmetic_detail_unit">Unit</string>
    <string name="activity_cosmetic_detail_register">RegisterDate</string>
    <string name="activity_cosmetic_detail_register_year">Y</string>
    <string name="activity_cosmetic_detail_register_month">M</string>
    <string name="activity_cosmetic_detail_register_date">D</string>
    <string name="activity_cosmetic_detail_usebydate">UseByDate</string>
    <string name="activity_cosmetic_detail_usebydate_year">Y</string>
    <string name="activity_cosmetic_detail_usebydate_month">M</string>
    <string name="activity_cosmetic_detail_usebydate_date">D</string>
    <string name="activity_cosmetic_detail_sale_information">Sale Information</string>
    <string name="activity_cosmetic_detail_sale_text">salestart</string>
    <string name="activity_cosmetic_detail_sale_guide_message">No Sale Today</string>
    <string name="activity_cosmetic_detail_sale_view_more">(Tab To View More)</string>
    <string name="activity_cosmetic_detail_button_update">update</string>
    <string name="activity_cosmetic_detail_button_cancel">cancel</string>

    <!-- view like -->
    <string name="view_like_sentence">Like</string>

    <!-- fragment my page -->
    <string name="fragment_my_page_my_cosmetics">My Cosmetics</string>
    <string name="fragment_my_page_eye_title">EYE</string>
    <string name="fragment_my_page_lip_title">LIP</string>
    <string name="fragment_my_page_skin_title">SKIN</string>
    <string name="fragment_my_page_face_title">FACE</string>
    <string name="fragment_my_page_cleansing_title">CLEANSING</string>
    <string name="fragment_my_page_tool_title">TOOL</string>
    <string name="fragment_my_page_my_activities">My Activities</string>
    <string name="fragment_my_page_my_tips">My Tips</string>
    <string name="fragment_my_page_likes">Likes</string>
    <string name="fragment_my_page_collection">Collection</string>

    <!-- activity like -->
    <string name="activity_like_dialog_title">Cancel Like</string>
    <string name="activity_like_dialog_content">Do you want to cancel like?</string>

    <!-- activity update profile -->
    <string name="activity_update_profile_detail_info">Detail Info.</string>
    <string name="activity_update_profile_gender">Gender</string>
    <string name="activity_update_profile_gender_male">Male</string>
    <string name="activity_update_profile_gender_female">Female</string>
    <string name="activity_update_profile_skin_type">Skin Type</string>
    <string name="activity_update_profile_dry">Dry</string>
    <string name="activity_update_profile_normal">Normal</string>
    <string name="activity_update_profile_oily">Oily</string>
    <string name="activity_update_profile_complex">Complex</string>
    <string name="activity_update_profile_skin_tone">Skin Tone</string>
    <string name="activity_update_profile_13">13</string>
    <string name="activity_update_profile_21">21</string>
    <string name="activity_update_profile_23">23</string>

    <!-- activity register detail -->
    <string name="activity_register_detail_register_date">Register Date</string>
    <string name="activity_register_detail_register_year">Y</string>
    <string name="activity_register_detail_register_month">M</string>
    <string name="activity_register_detail_register_day">D</string>
    <string name="activity_register_detail_useby_date">Use By Date</string>
    <string name="activity_register_detail_button_text">Register</string>

    <!-- activity access term -->
    <string name="activity_access_term_content"></string>

    <!-- activity_register_barcode -->
    <string name="activity_register_barcode_button_text">Direct Register</string>
    <string name="activity_register_barcode_title_text">We are going to recognize QR or barcode automatically</string>

    <!-- activity setting -->
    <string name="activity_setting_title_version">Version</string>
    <string name="activity_setting_title_alert">Alert</string>
    <string name="activity_setting_title_logout">Log Out</string>

    <!-- activity cosmetic list -->
    <string name="activity_cosmetic_list_text_default_message">Add Cosmetic Items</string>

    <!-- activity_register_search -->
    <string name="activity_register_search_keyword_hint">Insert Keyword</string>
    <string name="brand">Brand</string>
    <string name="etude_house">ETUDE House</string>
    <string name="apieu">APIEU</string>
    <string name="innisfree">INNISFREE</string>

    <string name="category">Category</string>
    <string name="eye_makeup">EYE MAKE-UP</string>
    <string name="lip_makeup">LIP MAKE-UP</string>
    <string name="skin_care">SKIN CARE</string>
    <string name="face">FACE</string>
    <string name="cleansing">CLEANSING</string>
    <string name="tool">TOOL</string>

    <string name="item">Item</string>
</resources>
